# looker-gen

./: .gitignore  README.md  logging.ini  pyproject.toml
.github/workflows/: ci.yml
looker_gen/: __init__.py  cli.py  config.py  files.py  generator.py  logging.py  looker.py  project.py  type_mappings.py  types.py
tests/: test_looker_gen.py
tests/fixtures/: postgres.json
